# ChangeLog for sys-apps/portage
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*portage-2.1.22.6239 (17 Mar 2007)

  17 Mar 2007; Fabian Groffen <grobian@gentoo.org>
  +portage-2.1.22.6239.ebuild:
  New snapshot, with repoman QuickCommit(tm) feature

*portage-2.1.22.6209 (15 Mar 2007)

  15 Mar 2007; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.6173.ebuild, +portage-2.1.22.6209.ebuild:
  New snapshot with fixed config-protect functionality

*portage-2.1.22.6204 (11 Mar 2007)

  11 Mar 2007; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.6152.ebuild, +portage-2.1.22.6204.ebuild:
  Add new snapshot, fixes bug in quickpgk

*portage-2.1.20.6185 (06 Mar 2007)

  06 Mar 2007; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.6132.ebuild, +portage-2.1.20.6185.ebuild:
  New snapshot, most important: a fix for repoman when used in locales other
  than C

*portage-2.1.20.6173 (04 Mar 2007)

  04 Mar 2007; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.6097.ebuild, +portage-2.1.20.6173.ebuild:
  New revision, fixes from upstream for prefix, fix for double-D check in prefix

*portage-2.1.20.6152 (03 Mar 2007)

  03 Mar 2007; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.6151.ebuild, +portage-2.1.20.6152.ebuild:
  Fix a bug for users not having a gentoo patched portage, making them unable
  to run emerge

*portage-2.1.20.6151 (03 Mar 2007)

  03 Mar 2007; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.6085.ebuild, +portage-2.1.20.6151.ebuild:
  New bump, mainly fixes.  Added support for AIX.

*portage-2.1.20.6132 (02 Mar 2007)

  02 Mar 2007; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.5937.ebuild, +portage-2.1.20.6132.ebuild:
  New release, mainly bugfixes

*portage-2.1.20.6097 (27 Feb 2007)

  27 Feb 2007; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.5894.ebuild, +portage-2.1.20.6097.ebuild:
  Fixes for backtraces reported on the gentoo-alt mailing list, added QA check