@@ -1,3 +1,0 @@
-MD5 ca0e3956efa89c83734e4e1ef66a44b9 prefix-portage-2.1.20.6185.tar.bz2 552708
-RMD160 ba77abb69b59643c4f347bfbc1f418007a2fca84 prefix-portage-2.1.20.6185.tar.bz2 552708
-SHA256 41b59a6b234e7bcd6a1e006a3a77918648e42394cbc3b087c73ee8e8c39a1de0 prefix-portage-2.1.20.6185.tar.bz2 552708
