@@ -1,3 +1,0 @@
-MD5 8fb83162047023d36433e8a12549d9d2 prefix-portage-2.1.22.6204.tar.bz2 554474
-RMD160 96c87b25bad6ec426af7efaa68099873f65fcd4f prefix-portage-2.1.22.6204.tar.bz2 554474
-SHA256 50652c08e133412ad04fdd05b213fbe63463fc19541d5318ebb42c4ada9cddf1 prefix-portage-2.1.22.6204.tar.bz2 554474
